force-app/main/default/objects/PI_Deal_History2__c/PI_Deal_History2__c.object-meta.xml
<CustomObject>
    <label>PI Deal History2</label>
    <nameField>
        <label>PI Deal History2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PI Deal History2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>