force-app/main/default/objects/PI_Deal_History2__c/fields/Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_By__c</fullName>
    <label>Authorized By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>