force-app/main/default/objects/PI_Deal_History2__c/fields/Authorized_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Authorized_DateTime__c</fullName>
    <label>Authorized DateTime</label>
    <type>DateTime</type>
</CustomField>