force-app/main/default/objects/PI_Deal_History2__c/fields/Buy_America_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Buy_America_Indicator__c</fullName>
    <label>Buy America Indicator</label>
    <length>15</length>
    <type>Text</type>
</CustomField>