force-app/main/default/objects/PI_Deal_History2__c/fields/CoCurTotalAuthorized__c.field-meta.xml
<CustomField>
    <fullName>CoCurTotalAuthorized__c</fullName>
    <label>Change Order Current Total Authorized</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>