force-app/main/default/objects/PI_Deal_History2__c/fields/CoCurTotalBook__c.field-meta.xml
<CustomField>
    <fullName>CoCurTotalBook__c</fullName>
    <label>Change Order Current Total Book</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>