force-app/main/default/objects/PI_Deal_History2__c/fields/CoCurTotalList__c.field-meta.xml
<CustomField>
    <fullName>CoCurTotalList__c</fullName>
    <label>Change Order Current Total List</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>