force-app/main/default/objects/PI_Deal_History2__c/fields/ConnectURL__c.field-meta.xml
<CustomField>
    <fullName>ConnectURL__c</fullName>
    <label>Connect URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>