force-app/main/default/objects/PI_Deal_History2__c/fields/CoTotalCost__c.field-meta.xml
<CustomField>
    <fullName>CoTotalCost__c</fullName>
    <label>Change Order Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>