force-app/main/default/objects/PI_Deal_History2__c/fields/Drawing_PDF__c.field-meta.xml
<CustomField>
    <fullName>Drawing_PDF__c</fullName>
    <label>Drawing PDF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>