force-app/main/default/objects/PI_Deal_History2__c/fields/ERF_Description__c.field-meta.xml
<CustomField>
    <fullName>ERF_Description__c</fullName>
    <label>ERF Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>