force-app/main/default/objects/PI_Deal_History2__c/fields/Exclude_From_Reauth__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reauth__c</fullName>
    <label>Exclude From Reauth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>