force-app/main/default/objects/PI_Deal_History2__c/fields/FOB_Charge_Percent__c.field-meta.xml
<CustomField>
    <fullName>FOB_Charge_Percent__c</fullName>
    <label>FOB Charge Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>