force-app/main/default/objects/PI_Deal_History2__c/fields/FOB_Monetary_Amt__c.field-meta.xml
<CustomField>
    <fullName>FOB_Monetary_Amt__c</fullName>
    <label>FOB Monetary Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>