force-app/main/default/objects/PI_Deal_History2__c/fields/FOB_Point__c.field-meta.xml
<CustomField>
    <fullName>FOB_Point__c</fullName>
    <label>FOB Point</label>
    <length>20</length>
    <type>Text</type>
</CustomField>