force-app/main/default/objects/PI_Deal_History2__c/fields/FreeOfChargeCostCenter__c.field-meta.xml
<CustomField>
    <fullName>FreeOfChargeCostCenter__c</fullName>
    <label>Free Of Charge Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>