force-app/main/default/objects/PI_Deal_History2__c/fields/FreeOfChargeUsage__c.field-meta.xml
<CustomField>
    <fullName>FreeOfChargeUsage__c</fullName>
    <label>Free Of Charge Usage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>