force-app/main/default/objects/PI_Deal_History2__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group_Name__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>