force-app/main/default/objects/PI_Deal_History2__c/fields/History_Type__c.field-meta.xml
<CustomField>
    <fullName>History_Type__c</fullName>
    <label>History Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>