force-app/main/default/objects/PI_Deal_History2__c/fields/Line_bol_IsFixed__c.field-meta.xml
<CustomField>
    <fullName>Line_bol_IsFixed__c</fullName>
    <label>Line_bol_IsFixed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>