force-app/main/default/objects/PI_Deal_History2__c/fields/Line_cur_AuthorizedPrice__c.field-meta.xml
<CustomField>
    <fullName>Line_cur_AuthorizedPrice__c</fullName>
    <label>Line_cur_AuthorizedPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>