force-app/main/default/objects/PI_Deal_History2__c/fields/line_cur_Rqst_DirPNatl__c.field-meta.xml
<CustomField>
    <fullName>line_cur_Rqst_DirPNatl__c</fullName>
    <label>line_cur_Rqst_DirPNatl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>