force-app/main/default/objects/PI_Deal_History2__c/fields/Line_mult_PDCatNationalNet__c.field-meta.xml
<CustomField>
    <fullName>Line_mult_PDCatNationalNet__c</fullName>
    <label>Line_mult_PDCatNationalNet</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>