force-app/main/default/objects/PI_Deal_History2__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>