force-app/main/default/objects/PI_Deal_History2__c/fields/LineMultZilliantFloor__c.field-meta.xml
<CustomField>
    <fullName>LineMultZilliantFloor__c</fullName>
    <label>Zilliant Raw Floor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>