force-app/main/default/objects/PI_Deal_History2__c/fields/LineMultZilliantTarget__c.field-meta.xml
<CustomField>
    <fullName>LineMultZilliantTarget__c</fullName>
    <label>Zilliant Raw Target</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>