force-app/main/default/objects/PI_Deal_History2__c/fields/ManufacturingBurdenUnitCost__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingBurdenUnitCost__c</fullName>
    <label>Manufacturing Burden Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>