force-app/main/default/objects/PI_Deal_History2__c/fields/OrderCurTotalAuthorized__c.field-meta.xml
<CustomField>
    <fullName>OrderCurTotalAuthorized__c</fullName>
    <label>Order Current Total Authorized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>