force-app/main/default/objects/PI_Deal_History2__c/fields/OrderCurTotalBook__c.field-meta.xml
<CustomField>
    <fullName>OrderCurTotalBook__c</fullName>
    <label>Order Current Total Book</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>