force-app/main/default/objects/PI_Deal_History2__c/fields/OrderCurTotalList__c.field-meta.xml
<CustomField>
    <fullName>OrderCurTotalList__c</fullName>
    <label>Order Current Total List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>