force-app/main/default/objects/PI_Deal_History2__c/fields/OrderTotalCost__c.field-meta.xml
<CustomField>
    <fullName>OrderTotalCost__c</fullName>
    <label>Order Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>