force-app/main/default/objects/PI_Deal_History2__c/fields/PDCAT__c.field-meta.xml
<CustomField>
    <fullName>PDCAT__c</fullName>
    <label>PDCAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>