force-app/main/default/objects/PI_Deal_History2__c/fields/PI_AllowReauthorize__c.field-meta.xml
<CustomField>
    <fullName>PI_AllowReauthorize__c</fullName>
    <label>Allow Reauthorize</label>
    <length>18</length>
    <type>Text</type>
</CustomField>