force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthAboveMinFloor__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthAboveMinFloor__c</fullName>
    <label>Reauthorize Above Min Floor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>