force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthNewPDCatsAtAboveTarget__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthNewPDCatsAtAboveTarget__c</fullName>
    <label>Reauthorize New PDCat Above Target</label>
    <length>18</length>
    <type>Text</type>
</CustomField>