force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthWithinAllowedDays__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthWithinAllowedDays__c</fullName>
    <label>Reauthorize Within Allowed Days</label>
    <length>18</length>
    <type>Text</type>
</CustomField>