force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthWithinBookChangePercentLimits__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthWithinBookChangePercentLimits__c</fullName>
    <label>Reauthorize Within Book Chg % Limit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>