force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthWithinMarginChangePercentLimits__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthWithinMarginChangePercentLimits__c</fullName>
    <label>Reauthorize Within Margin Chg % Limit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>