force-app/main/default/objects/PI_Deal_History2__c/fields/PI_ReauthWithinReauthCountLimit__c.field-meta.xml
<CustomField>
    <fullName>PI_ReauthWithinReauthCountLimit__c</fullName>
    <label>Reauthorize Within Count Limit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>