force-app/main/default/objects/PI_Deal_History2__c/fields/PriceManagerCostUpdated__c.field-meta.xml
<CustomField>
    <fullName>PriceManagerCostUpdated__c</fullName>
    <label>Price Manager Cost Updated Indicator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>