force-app/main/default/objects/PI_Deal_History2__c/fields/Primary_Index_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Index_Key__c</fullName>
    <label>Primary Index Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>