force-app/main/default/objects/PI_Deal_History2__c/fields/PriorLineItemId__c.field-meta.xml
<CustomField>
    <fullName>PriorLineItemId__c</fullName>
    <label>PriorLineItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>