force-app/main/default/objects/PI_Deal_History2__c/fields/Profile_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Profile_Multiplier__c</fullName>
    <label>Profile_Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>