force-app/main/default/objects/PI_Deal_History2__c/fields/ProsNullPriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>ProsNullPriceIndicator__c</fullName>
    <label>ProsNullPriceIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>