force-app/main/default/objects/PI_Deal_History2__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>PI Deal History2s</relationshipLabel>
    <relationshipName>PI_Deal_History2s</relationshipName>
    <type>Lookup</type>
</CustomField>