force-app/main/default/objects/PI_Deal_History2__c/fields/Quote_Cur_TotalFloor__c.field-meta.xml
<CustomField>
    <fullName>Quote_Cur_TotalFloor__c</fullName>
    <label>Quote_Cur_TotalFloor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>