force-app/main/default/objects/PI_Deal_History2__c/fields/Quote_cur_TotalProfile_c__c.field-meta.xml
<CustomField>
    <fullName>Quote_cur_TotalProfile_c__c</fullName>
    <label>Quote_cur_TotalProfile__c</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>