force-app/main/default/objects/PI_Deal_History2__c/fields/Quote_NBR__c.field-meta.xml
<CustomField>
    <fullName>Quote_NBR__c</fullName>
    <label>Quote_NBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>