force-app/main/default/objects/PI_Deal_History2__c/fields/QuoteTotalCost_c__c.field-meta.xml
<CustomField>
    <fullName>QuoteTotalCost_c__c</fullName>
    <label>QuoteTotalCost__c</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>