force-app/main/default/objects/PI_Deal_History2__c/fields/ReauthorizationMethod_c__c.field-meta.xml
<CustomField>
    <fullName>ReauthorizationMethod_c__c</fullName>
    <label>ReauthorizationMethod__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>