force-app/main/default/objects/PI_Deal_History2__c/fields/Rebate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Indicator__c</fullName>
    <label>Rebate Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>