force-app/main/default/objects/PI_Deal_History2__c/fields/RequestedPriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>RequestedPriceIndicator__c</fullName>
    <label>RequestedPriceIndicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>