force-app/main/default/objects/PI_Deal_History2__c/fields/Scenario_Designation__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Designation__c</fullName>
    <label>Scenario Designation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>