force-app/main/default/objects/PI_Deal_History2__c/fields/SE_Program__c.field-meta.xml
<CustomField>
    <fullName>SE_Program__c</fullName>
    <label>SE Program</label>
    <length>35</length>
    <type>Text</type>
</CustomField>