force-app/main/default/objects/PI_Deal_History2__c/fields/Secondary_Index_Key__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Index_Key__c</fullName>
    <label>Secondary Index Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>