force-app/main/default/objects/PI_Deal_History2__c/fields/Segmentation_Key__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Key__c</fullName>
    <label>Segmentation Key</label>
    <length>15</length>
    <type>Text</type>
</CustomField>