force-app/main/default/objects/PI_Deal_History2__c/fields/SPD_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPD_Comments__c</fullName>
    <label>SPD Comments</label>
    <length>15</length>
    <type>Text</type>
</CustomField>