force-app/main/default/objects/PI_Deal_History2__c/fields/SPD_REV_Level__c.field-meta.xml
<CustomField>
    <fullName>SPD_REV_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPD REV Level</label>
    <referenceTo>SPD_REV_Level__c</referenceTo>
    <relationshipLabel>PI Deal History2s</relationshipLabel>
    <relationshipName>PI_Deal_History2s</relationshipName>
    <type>Lookup</type>
</CustomField>