force-app/main/default/objects/PI_Deal_History2__c/fields/Warranty_FOB_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Warranty_FOB_Indicator__c</fullName>
    <label>Warranty FOB Indicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>