force-app/main/default/objects/PI_Deal_History2__c/fields/Warranty_InOut__c.field-meta.xml
<CustomField>
    <fullName>Warranty_InOut__c</fullName>
    <label>Warranty InOut</label>
    <length>15</length>
    <type>Text</type>
</CustomField>