force-app/main/default/objects/PI_Deal_History2__c/fields/Warranty_Monetary_Amt__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Monetary_Amt__c</fullName>
    <label>Warranty Monetary Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>