force-app/main/default/objects/PI_Deal_History2__c/fields/Warranty_Total_Years__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Total_Years__c</fullName>
    <label>Warranty Total Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>