force-app/main/default/objects/PI_Deal_History2__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>