force-app/main/default/objects/PI_Deal_History2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Authorized_By__c</columns>
    <columns>Authorized_DateTime__c</columns>
    <columns>Buy_America_Indicator__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Designation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>